<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.StaffPageFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/staffPagePoster"
        android:layout_width="150dp"
        android:layout_height="210dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/staffPageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="Actor"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/staffPagePoster"
        app:layout_constraintTop_toTopOf="@+id/staffPagePoster" />

    <TextView
        android:id="@+id/staffPagePersoneJob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/staffPageName"
        app:layout_constraintTop_toBottomOf="@+id/staffPageName" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/graphik"
        android:text="@string/the_best"
        app:layout_constraintStart_toStartOf="@+id/staffPagePoster"
        app:layout_constraintTop_toBottomOf="@+id/staffPagePoster" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filmListInActor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:listitem="@layout/films_list" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/graphik"
        android:text="@string/filmography"
        app:layout_constraintStart_toStartOf="@+id/filmListInActor"
        app:layout_constraintTop_toBottomOf="@+id/filmListInActor" />

    <TextView
        android:id="@+id/filmographyCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/toTheList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_the_list"
        app:layout_constraintEnd_toEndOf="@+id/filmListInActor"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>