<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:visibility="visible"
    android:scrollbars="none"
    tools:context=".presentation.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp">

        <TextView
            android:id="@+id/viewedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewed"
            android:visibility="gone"
            style="@style/graphik_18sp_black_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/collectionsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/collections"
            style="@style/graphik_18sp_black_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filmListViewed" />

        <TextView
            android:id="@+id/countViewedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            tools:text="1"
            android:visibility="gone"
            style="@style/graphik_14sp_blue_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/viewedText" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/filmListViewed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@+id/countViewedText"
            app:layout_constraintStart_toStartOf="@+id/viewedText"
            app:layout_constraintTop_toBottomOf="@+id/viewedText"
            tools:listitem="@layout/films_list" />


        <com.google.android.material.textview.MaterialTextView

            android:id="@+id/create_collection"
            style="@style/graphik_16sp_black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawablePadding="16dp"
            android:gravity="left"
            android:text="@string/create_collection"
            app:drawableStartCompat="@drawable/plus_icons"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/collectionsText" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/collectionListViewed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_collection"
            app:spanCount="2"
            tools:itemCount="4"
            tools:listitem="@layout/collection_in_profile" />

        <TextView
            android:id="@+id/films_andStaff_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/graphik_18sp_black_bold"
            android:text="@string/were_you_interested"
            app:layout_constraintStart_toStartOf="@+id/collectionListViewed"
            app:layout_constraintTop_toBottomOf="@+id/collectionListViewed" />

        <TextView
            android:id="@+id/films_andStaff_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1"
            style="@style/graphik_14sp_blue_bold"
            app:layout_constraintEnd_toEndOf="@+id/collectionListViewed"
            app:layout_constraintTop_toTopOf="@+id/films_andStaff_text" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/filmAndStaffList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@+id/collectionListViewed"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/collectionListViewed"
            app:layout_constraintTop_toBottomOf="@+id/films_andStaff_text"
            tools:listitem="@layout/films_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>